--- a/rusty_sims/Cargo.toml
+++ b/rusty_sims/Cargo.toml
@@ -10,3 +10,6 @@ bcrypt = "0.15"
 ulid = "1.1.2"
 comfy-table = "7.1.0"
 rusqlite = "0.31.0"
+ratatui = { version = "0.26.1", features = ["all-widgets"] }
+crossterm = "0.27.0"
+
